refactor(executor): read worker answers as records (#94)
The worker's answers are records whose constructors state what a valid
answer is. Echo comparisons stay with the caller, which is the only side
that knows what it sent, and a failure code still selects a branch.

An answer this application cannot read leaves as an unavailable worker and
nothing else, including a payload that is not base64 and a termination it
does not know. Reporting such an answer as a rejected request would tell
the agent its selection was wrong and invite it to retry a command that
may already have run.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>